[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/ai_teacher_mode/teacher_dock.gd" id="1_teacher"]

[node name="TeacherDock" type="Control"]
custom_minimum_size = Vector2(360, 560)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_teacher")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AI Teacher Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PathSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrentSectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current: -"

[node name="CoachText" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
bbcode_enabled = true
fit_content = false
scroll_active = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DoActionButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Do Action"

[node name="RunCheckButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Run Check"

[node name="FixButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fix"

[node name="MilestoneProgress" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = true

[node name="SectionList" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2

[node name="LogText" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
bbcode_enabled = false
fit_content = false
